# calc

./: CMakeLists.txt  README.md  license.txt  makefile
include/: rpn_calc.h  shunting_yard.h  stack.h  tokenizer.h
src/: CMakeLists.txt  main.c  rpn_calc.c  shunting_yard.c  stack.c  tokenizer.c
